force-app/main/default/objects/Survey_Response__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>