force-app/main/default/objects/Survey_Response__c/fields/Brand_Alias__c.field-meta.xml
<CustomField>
    <fullName>Brand_Alias__c</fullName>
    <label>Brand Alias</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>(brand-alias list)</fullName><default>false</default><label>(brand-alias list)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>