force-app/main/default/objects/Survey_Response__c/fields/Max_Possible_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Possible_Score__c</fullName>
    <description>Maximum achievable score based on question weights. Used to calculate score percentage.</description>
    <label>Max Possible Score</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>