force-app/main/default/objects/Survey_Response__c/fields/Photo_After__c.field-meta.xml
<CustomField>
    <fullName>Photo_After__c</fullName>
    <label>Photo After</label>
    <length>255</length>
    <type>Text</type>
</CustomField>