force-app/main/default/objects/Survey_Response__c/fields/Photo_Before__c.field-meta.xml
<CustomField>
    <fullName>Photo_Before__c</fullName>
    <label>Photo Before</label>
    <length>255</length>
    <type>Text</type>
</CustomField>