force-app/main/default/objects/Survey_Response__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Survey_Question__c</referenceTo>
    <relationshipName>SurveyResponse_Question</relationshipName>
    <type>Lookup</type>
</CustomField>