force-app/main/default/objects/Survey_Response__c/fields/Score_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Score_Percentage__c</fullName>
    <description>Percentage score = (Total_Score / Max_Possible_Score) * 100</description>
    <label>Score %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>