force-app/main/default/objects/Survey_Response__c/fields/Visibility_Type__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Type__c</fullName>
    <label>Visibility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
            <value><fullName>Unpaid</fullName><default>false</default><label>Unpaid</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>